package exo2

class Marchandise (private val poids : Double, private val volume : Double) {
    fun donnePoids() = poids
    fun donneVolume() = volume
}